---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2021.08.14
  Locale:
    - Russian translations added (thanks Shadow_Man)
  Bugfixes:
    - Don't play "new objective" sound effect when completing Onboarding
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2021.08.13
  Bugfixes:
    - Settings the technology multiplier to anything other than 1 would break MAM research
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2021.08.12
  Bugfixes:
    - Fix that changing object scanner from the quickbar would leave a "zombie" ping.
    - Added the /clear-pings command to clear such zombie pings.
    - Note that this will also clear Corpse Finder pings so be sure to clean up first ;)
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2021.08.12
  Bugfixes:
    - Most recipes in the Equipment Workshop did not correctly tick down the To Do List
  Changes:
    - Craft Bench and Equipment Workshop output inventories are now also counted as "owned" for the To Do List
  Balancing:
    - Increased HUB Biomass Burners from 20MW to 21MW for easier recovery from blackouts in early-game (due to energy buffers)
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2021.08.07
  Bugfixes:
    - Fix crash on mining AWESOME Sink (#79)
  Optimizations:
    - Added event filter to ignore ghost entities, massively increasing performance of blueprinting
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2021.08.06
  Info:
    - Rearranged changelog to put newest versions at the top, for easier viewing on mod portal
  Bugfixes: