@@ -36,4 +36,3 @@ beacon-confirm=Confirm
 [message]
 tag-needs-beacon=[color=red]Placing a tag is done using a[/color] [img=item.map-marker] [color=#2cd23f]Beacon[/color][color=red]. Renaming or deleting it is done from the placed entity.[/color]
 beacon-scanner-no-beacons-placed=[color=red]You have not placed any[/color] [img=item.map-marker] [color=#2cd32f]Beacons[/color][color=red].[/color]
-foundation-blocked=[color=red]Cannot remove __1__×[/color] [img=item.foundation] [color=#2cd23f]Foundation[/color] [color=red]with other entities on top.[/color]
