@@ -36,4 +36,3 @@ beacon-confirm=Подтвердить
 [message]
 tag-needs-beacon=[color=red]Установка метки производится с использованием[/color] [img=item.map-marker] [color=#2cd23f]Радиомаяка[/color][color=red]. Переименование или удаление производится из установленной метки.[/color]
 beacon-scanner-no-beacons-placed=[color=red]Вы не установили ни одного[/color] [img=item.map-marker] [color=#2cd32f]Радиомаяка[/color][color=red].[/color]
-foundation-blocked=[color=red]Невозможно удалить __1__×[/color] [img=item.foundation] [color=#2cd23f]Фундамент[/color] [color=red] с установленными на нём объектами.[/color]
